# user_management

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
user_management/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py
user_management/db/: base.py  utils.py
user_management/db/dao/: user_dao.py
user_management/db/migrations/: env.py
user_management/db/migrations/versions/: 2024-05-20-00-02_ad68f1c9b12a.py
user_management/db/models/: __init__.py  event.py  user.py
user_management/listener/: db.py  listeners.py  main.py  manager.py
user_management/services/: __init__.py  authentication.py
user_management/tests/: __init__.py  test_listener.py  test_user_management.py
user_management/web/: __init__.py  application.py  lifetime.py
user_management/web/api/: __init__.py  router.py
user_management/web/api/monitoring/: __init__.py
user_management/web/api/users/: __init__.py  schema.py  views.py
